# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../testing/test.gni")
import("../../Lynx.gni")
import("build.gni")

lynx_core_source_set("data") {
  sources = lynx_data_shared_sources_path
  if (!is_oliver_ssr) {
    sources += lynx_data_platform_sources_path
  }
  deps = [
    "../../../base/src:base_log_headers",
    "../../../third_party/rapidjson:rapidjson",
  ]
}
