# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../Lynx.gni")

lynx_core_source_set("ui_wrapper") {
  sources = []

  deps = [
    "../trace:renderer_trace",
    "common",
    "layout",
    "painting",
  ]
}
