# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("../../../config.gni")
import("../../../testing/test.gni")

unittest_set("devtool_transition_testset") {
  testonly = true
  sources = [ "devtool_transition_unittest.cc" ]

  deps = [
    "../../base_devtool/native:base_devtool",
    "../mock:devtool_mock",
    "../utils:devtool_testing_utils",
  ]

  include_dirs = [ "//third_party/googletest/googletest/include" ]

  public_configs = [
    "../../../core:lynx_public_config",
    "../../lynx_devtool:devtool_common_config",
  ]
}
