# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("../../../config.gni")
import("../../../testing/test.gni")

source_set("devtool_testing_utils") {
  sources = [
    "devtool_env_testing.cc",
    "devtool_env_testing.h",
    "method_tracker.cc",
    "method_tracker.h",
  ]

  deps = [ "../mock:devtool_mock" ]

  include_dirs = [ "//third_party/googletest/googletest/include" ]

  public_configs = [
    "../../../core:lynx_public_config",
    "../../lynx_devtool:devtool_common_config",
  ]
}
